# wip

./: Cargo.toml  README.md  dashboard.py  repos.example.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/superpowers/plans/: 2026-06-01-wip-cross-repo-dev-status.md  2026-06-01-wip-v2-next-actions.md  2026-06-01-wip-v3a-sessionstart-hook.md  2026-06-01-wip-v3b-release-ci.md
docs/superpowers/specs/: 2026-06-01-wip-cross-repo-dev-status-design.md  2026-06-01-wip-v2-next-actions-design.md  2026-06-01-wip-v3a-sessionstart-hook-design.md  2026-06-01-wip-v3b-release-ci-design.md
skill/: SKILL.md
src/: cli.rs  collector.rs  config.rs  gh.rs  git.rs  hook.rs  main.rs  model.rs  next.rs  planning.rs  progress.rs  render.rs  skill.rs
