[package]
name = "wip"
version = "0.1.0"
edition = "2021"
description = "Cross-repo dev status board for humans and AI agents"

[[bin]]
name = "wip"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
